--- a/index.html
+++ b/index.html
@@ -100,7 +100,6 @@
             transform: translate(-50%, -50%);
         }
 
-        /* Terminal Effects */
         .terminal-3d {
             perspective: 1500px;
             transform-style: preserve-3d;
@@ -635,10 +634,11 @@
             <div class="container mx-auto px-6 text-center relative z-10">
                 <div class="max-w-4xl mx-auto">
                     <h1 class="text-5xl md:text-7xl font-bold mb-6 neon-text tracking-tight">
-                        The Next-Gen Terminal Experience
+                        Aether Terminal
                     </h1>
                     <p class="text-xl md:text-2xl mb-12 text-white/90">
-                        Transform your command line experience with stunning visuals and unmatched productivity tools.
+                        A powerful terminal emulator designed for modern developers. 
+                        Featuring advanced customization, split views, and seamless workflow integration.
                     </p>
                     <div class="flex flex-col sm:flex-row justify-center gap-4 mb-12">
                         <a href="/downloads/aether_terminal.exe" download 
@@ -788,36 +788,21 @@
             </div>
         </section>
 
-        <section id="faq" class="py-20">
+        <section id="faq" class="py-20 bg-gray-900">
             <div class="container mx-auto px-6">
-                <h2 class="text-3xl md:text-4xl font-bold text-center mb-12">Frequently Asked Questions</h2>
-                <div class="max-w-3xl mx-auto">
-                    <div class="faq-item mb-4">
-                        <div class="faq-question glass-effect p-4 rounded-lg shadow cursor-pointer flex justify-between items-center">
-                            <h3 class="font-semibold">What makes Aether Terminal different?</h3>
-                            <i class="fas fa-chevron-down"></i>
-                        </div>
-                        <div class="faq-answer bg-gray-100 dark:bg-gray-700 p-4 rounded-b-lg">
-                            <p>Aether Terminal combines advanced features, stunning customization options, and a sprinkle of humor to create the most enjoyable terminal experience you've ever had. It's like a party for your command line!</p>
-                        </div>
+                <h2 class="text-3xl md:text-4xl font-bold text-center mb-12 gradient-text">Common Questions</h2>
+                <div class="max-w-3xl mx-auto space-y-6">
+                    <div class="glass-card">
+                        <h3 class="text-xl font-bold mb-2">Is Aether Terminal free to use?</h3>
+                        <p class="text-gray-300">Yes, Aether Terminal is free and open-source software under the MIT license.</p>
                     </div>
-                    <div class="faq-item mb-4">
-                        <div class="faq-question glass-effect p-4 rounded-lg shadow cursor-pointer flex justify-between items-center">
-                            <h3 class="font-semibold">Is Aether Terminal compatible with my existing scripts?</h3>
-                            <i class="fas fa-chevron-down"></i>
-                        </div>
-                        <div class="faq-answer bg-gray-100 dark:bg-gray-700 p-4 rounded-b-lg">
-                            <p>Aether Terminal plays nice with all your existing scripts and tools. It's like a chameleon, blending seamlessly into your workflow while adding a touch of magic.</p>
-                        </div>
+                    <div class="glass-card">
+                        <h3 class="text-xl font-bold mb-2">Can I import my existing terminal settings?</h3>
+                        <p class="text-gray-300">Yes, Aether Terminal supports importing configurations from most popular terminal emulators.</p>
                     </div>
-                    <div class="faq-item mb-4">
-                        <div class="faq-question glass-effect p-4 rounded-lg shadow cursor-pointer flex justify-between items-center">
-                            <h3 class="font-semibold">Can I create my own themes for Aether Terminal?</h3>
-                            <i class="fas fa-chevron-down"></i>
-                        </div>
-                        <div class="faq-answer bg-gray-100 dark:bg-gray-700 p-4 rounded-b-lg">
-                            <p>You bet! Aether Terminal's theme engine is so powerful, you can make your terminal look like anything from a serene beach to a cyberpunk dystopia. Let your imagination run wild!</p>
-                        </div>
+                    <div class="glass-card">
+                        <h3 class="text-xl font-bold mb-2">What operating systems are supported?</h3>
+                        <p class="text-gray-300">Currently Windows 10/11, with macOS and Linux support coming soon.</p>
                     </div>
                 </div>
             </div>
