--- a/index.html
+++ b/index.html
@@ -941,7 +941,7 @@
                             <a href="/downloads/aether_terminal.exe" 
                                class="group relative inline-flex items-center">
                                 <span class="relative z-10 flex items-center text-lg font-light">
-                                    Download
+                                    Download (V1 - Outdated)
                                     <svg class="w-6 h-6 ml-4 transform group-hover:translate-x-2 transition-transform" 
                                          fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1" 
